--- a/PracticaFinal/app/src/main/res/layout/logoguesswindow_activity.xml
+++ b/PracticaFinal/app/src/main/res/layout/logoguesswindow_activity.xml
@@ -1,24 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/selectedlogo"
+    <RelativeLayout
+        android:id="@+id/mainlogorelative"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/guideline9"
+        app:layout_constraintTop_toTopOf="@+id/guideline11"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline11"
-        app:srcCompat="@drawable/amazon" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/selectedlogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/amazon" />
+
+        <ImageView
+            android:id="@+id/logoguessedmain"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/check"
+            android:layout_alignEnd="@id/selectedlogo"
+            android:layout_alignBottom="@id/selectedlogo"
+            android:layout_marginBottom="10dp"/>
+
+    </RelativeLayout>
+
 
     <RelativeLayout
         android:id="@+id/logonamerelative"
@@ -88,11 +104,11 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/selectedlogo"
+        app:layout_constraintBottom_toBottomOf="@+id/mainlogorelative"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.952"
-        app:layout_constraintStart_toEndOf="@+id/selectedlogo"
-        app:layout_constraintTop_toTopOf="@+id/selectedlogo"
+        app:layout_constraintStart_toEndOf="@+id/mainlogorelative"
+        app:layout_constraintTop_toTopOf="@+id/mainlogorelative"
         app:srcCompat="@drawable/rightarrow" />
 
     <ImageView
@@ -100,11 +116,11 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/selectedlogo"
-        app:layout_constraintEnd_toStartOf="@+id/selectedlogo"
+        app:layout_constraintBottom_toBottomOf="@+id/mainlogorelative"
+        app:layout_constraintEnd_toStartOf="@+id/mainlogorelative"
         app:layout_constraintHorizontal_bias="0.202"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/selectedlogo"
+        app:layout_constraintTop_toTopOf="@+id/mainlogorelative"
         app:srcCompat="@drawable/leftarrow" />
 
     <ImageView
