--- a/PracticaFinal/app/src/main/res/layout/logolist.xml
+++ b/PracticaFinal/app/src/main/res/layout/logolist.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
@@ -14,4 +14,13 @@
         android:layout_marginTop="10dp"
         app:srcCompat="@drawable/adidas" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/logoguessed"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignEnd="@id/logo"
+        android:layout_alignBottom="@id/logo"
+        android:layout_marginBottom="12dp"
+        android:src="@drawable/check" />
+
+</RelativeLayout>
