--- a/PracticaFinal/app/src/main/res/layout/main_activity.xml
+++ b/PracticaFinal/app/src/main/res/layout/main_activity.xml
@@ -133,9 +133,9 @@
     <TextView
         android:id="@+id/tvtotalcoins"
         android:layout_width="163dp"
-        android:layout_height="wrap_content"
+        android:layout_height="34dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="96dp"
         android:fontFamily="casual"
         android:text="TOTAL COINS:"
@@ -145,39 +145,35 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline12"
-        app:layout_constraintVertical_bias="0.336" />
+        app:layout_constraintVertical_bias="0.45" />
 
     <TextView
         android:id="@+id/totalcoins"
-        android:layout_width="19dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="29dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
         android:fontFamily="casual"
         android:text="0"
         android:textColor="#212121"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/tvtotalcoins"
         app:layout_constraintStart_toEndOf="@+id/tvtotalcoins"
-        app:layout_constraintTop_toTopOf="@+id/guideline12"
-        app:layout_constraintVertical_bias="0.157" />
+        app:layout_constraintTop_toTopOf="@+id/tvtotalcoins"
+        app:layout_constraintVertical_bias="0.285" />
 
     <ImageView
         android:id="@+id/mvcoin"
         android:layout_width="35dp"
-        android:layout_height="50dp"
+        android:layout_height="52dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/totalcoins"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintHorizontal_bias="0.065"
         app:layout_constraintStart_toEndOf="@+id/totalcoins"
-        app:layout_constraintTop_toTopOf="@+id/guideline12"
-        app:layout_constraintVertical_bias="0.134"
+        app:layout_constraintTop_toTopOf="@+id/totalcoins"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/coin" />
 
     <android.support.constraint.Guideline
@@ -185,7 +181,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7" />
+        app:layout_constraintGuide_percent="0.75" />
 
 
 </android.support.constraint.ConstraintLayout>
